syntax = "proto3";

package com.muuzika.registry;

import "common.proto";
import "registry/common.proto";

import "google/protobuf/empty.proto";

service RegistryLobbyService {
  rpc CreateRoom(UsernameAndPassword) returns (JoinRoomResponse);
  rpc JoinRoom(CodeWithUsernameAndPassword) returns (JoinRoomResponse);
  rpc GetServerInfo(ServerId) returns (ServerInfo);
}

message UsernameAndPassword {
  string username = 1;
  optional string password = 2;
}

message CodeWithUsernameAndPassword {
  common.RoomCode code = 1;
  UsernameAndPassword username_and_password = 2;
}

message JoinRoomResponse {
  common.RoomCode code = 1;
  ServerInfo server = 2;
  RoomToken token = 3;
}

message CreateRoomError {
  oneof error {
    google.protobuf.Empty internal_error = 1;
    google.protobuf.Empty out_of_codes = 2;
    google.protobuf.Empty no_server_available = 3;
  }
}

message JoinRoomError {
  oneof error {
    google.protobuf.Empty internal_error = 1;
    google.protobuf.Empty room_not_found = 2;
    google.protobuf.Empty room_full = 3;
    google.protobuf.Empty wrong_password = 4;
    google.protobuf.Empty user_already_in_room = 5;
  }
}

message GetServerInfoError {
  oneof error {
    google.protobuf.Empty server_not_found = 2;
  }
}