syntax = "proto3";

package com.muuzika.registry;

import "common.proto";

import "google/protobuf/empty.proto";
import "registry/common.proto";

message ServerRegistrationRequest {
  string address = 1;
  string description = 2;
  repeated RoomRegistryDefinition rooms = 3;
  optional uint32 capacity = 4;
}

message ServerRegistrationResponse {
  ServerId server_id = 1;
  repeated RoomCodeChange conflicts = 2;
}

message ServerRegistrationError {
  oneof error {
    google.protobuf.Empty internal_error = 1;
  }
}

message RoomCodeChange {
  common.RoomCode before = 1;
  common.RoomCode after = 2;
}